[gd_scene load_steps=10 format=2]

[ext_resource path="res://RaceCar.gd" type="Script" id=1]
[ext_resource path="res://loop_4_0.wav" type="AudioStream" id=2]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, -1.48438, 0, 0, Vector2( 1, 0 ), 0.0558826, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 12.0
scale_curve = SubResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "completed_race"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "completed_race_new_record"
length = 1.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
}, {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "start_race"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 1, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
}, {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
}, {
"args": [  ],
"method": "vibrate_all"
}, {
"args": [  ],
"method": "stop_vibrate"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_car"
} ]
}

[node name="RaceCar" type="PathFollow2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -8, 0 )
local_coords = false
process_material = SubResource( 3 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Graphics"]
position = Vector2( -16, 0 )
rotation = 1.5708
color = Color( 0.298039, 1, 0.313726, 1 )
polygon = PoolVector2Array( 0, -8, -8, 0, 0, -32, 8, 0 )

[node name="EngineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start_race"
anims/completed_race = SubResource( 5 )
anims/completed_race_new_record = SubResource( 6 )
anims/start_race = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TrackTime" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 287.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 3 )
text = "Track Time: 0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTrackTime" type="Label" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 270.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "Best Time: 0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRecord" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -84.0
margin_right = 110.0
margin_bottom = -51.0
custom_fonts/font = ExtResource( 3 )
text = "New Record!"
__meta__ = {
"_edit_use_anchors_": false
}
